# G25F

./: .gitignore  CMakeLists.txt  README.md  build.bat  setup_dependencies.bat  setup_dependencies.ps1
electron/: build_manual.bat  build_manual.ps1  electron-builder.json  index.html  package-lock.json  package.json  styles.css
include/: Injector.h  Logger.h  ProcessUtils.h  WebSocketServer.h
src/: Injector.cpp  Logger.cpp  Main.cpp  ProcessUtils.cpp  backend.cpp
